# photohunter-backend

./: .gitignore  API_DOCUMENTATION.md  README.md  main.py  manage.py  pyproject.toml  requirements.txt  test_api.py
api/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: import_photohunts.py  seed_data.py
api/migrations/: 0001_initial.py  0002_update_coordinate_precision.py  0003_alter_photohunt_latitude_alter_photohunt_longitude.py  0004_alter_photohunt_latitude_alter_photohunt_longitude.py  0005_add_difficulty_and_hint_to_photohunt.py
api/services/: photo_validation_service.py  s3_service.py
photohunter_backend/: asgi.py  settings.py  urls.py  wsgi.py
